--- a/src/pages/hinnoittelu.astro
+++ b/src/pages/hinnoittelu.astro
@@ -5,7 +5,7 @@ import RegisterButton from '../components/common/RegisterButton.astro'
 
 <Layout>
     <div class="wrapper">
-        <h1>Läpinäkyvä ja reilu hinnoittelu</h1>
+        <h1 style="text-align: center;">Läpinäkyvä ja reilu hinnoittelu</h1>
         <div class="pricing">
             <div class="pricingElement">
                 <h2>Maks. 3 työntekijää</h2>
@@ -69,6 +69,7 @@ import RegisterButton from '../components/common/RegisterButton.astro'
         }
         .pricingElement {
             padding: 0.3rem;
+            padding-bottom: 1.5rem;
         }
     }
 </style>
