Load hero image instantly

--- a/src/components/mainPage/Hero.astro
+++ b/src/components/mainPage/Hero.astro
@@ -8,7 +8,7 @@ import RegisterButton from '../common/RegisterButton.astro'
 <div class="hero">
     <h1>Ravintolan työvuorolista nopeasti ja helposti</h1>
     <div class="heroImage">
-        <Image src={tyovuorolista_hero} alt="Työvuorolista" width={600} />
+        <Image src={tyovuorolista_hero} alt="Työvuorolista" width={600} loading='eager'/>
     </div>
     <h3>Rekisteröidy, tee työvuorolista ja julkaise se alta viiden minuutin!</h3>
     <span class="buttons">
