--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,9 @@ import Footer from '../components/navigation/Footer.astro'
             property="twitter:image"
             content="https://tyovuorolista.fi/assets/metaImage.png"
         />
+
+        <script defer data-domain="tyovuorolista.fi" src="https://analytics.tyovuorolista.fi/js/script.js"></script>
+
     </head>
     <body>
         <Navigation />
