First blog post, post layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -90,4 +90,12 @@ import Footer from '../components/navigation/Footer.astro'
         align-items: center;
         margin-top: 6rem;
     }
+    .blogWrapper {
+        display: flex;
+        flex-direction: column;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: 2rem;
+        padding: 2rem;
+    }
 </style>
