--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -15,12 +15,13 @@ const { text, backgroundColor, href, textColor } = Astro.props
         background-color: var(--backgroundColor);
         border-radius: 4px;
         padding: 1rem;
-        transition: background-color 0.3s ease;
+        transition: var(--hiekka) 0.3s ease;
         min-width: 100px;
         text-align: center;
     }
     .button:hover {
         border-color: var(--harmaa);
+        filter: brightness(1.1);
         cursor: pointer;
     }
     .button:active {
