Initial blog posts page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Footer from '../components/navigation/Footer.astro'
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Astro description" />
+        <meta name="description" content="Tyovuorolista.fi: ravintolan työvuorolistat nopeasti ja helposti" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/svg+xml" href="/favicon.png" />
         <!-- Primary Meta Tags -->
