--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -16,8 +16,8 @@ import dayjs from 'dayjs'
             <Button
                 text="Kokeile Työvuorolistaa ilmaiseksi"
                 backgroundColor="var(--tummanvihrea)"
-                ,
                 textColor="var(--vaaleanharmaa)"
+                href="https://app.tyovuorolista.fi/CreateNewAccount"
             />
         </div>
     </div>
