--- a/src/components/common/BlogPostCard.astro
+++ b/src/components/common/BlogPostCard.astro
@@ -1,8 +1,7 @@
 ---
 const { title, pubDate, image, description, tags } = Astro.props.post.frontmatter
 const { url } = Astro.props.post
-console.log('🚀 ~ file: BlogPostCard.astro:3 ~ title:', title)
-console.log(Astro.props)
+import dayjs from "dayjs";
 ---
 
 <div class="blogPostCard">
@@ -10,21 +9,46 @@ console.log(Astro.props)
         <div>
             <h1>{title}</h1>
             <p>{description}</p>
-            <p>{pubDate}</p>
-            <p>{tags}</p>
+            <p>Julkaistu <strong>{dayjs(pubDate).format('DD.MM.YYYY')}</strong></p>
+            <p>Avainsanat: 
+                {
+                    tags.map((tag: string, index: number) => {
+                        if (index === tags.length - 1) {
+                            return tag
+                        } else {
+                            return tag + ', '
+                        }
+                    })
+                }
+            </p>
         </div>
     </a>
 </div>
 
-    <style>
-        .blogPostCard {
-            border: 1px solid var(--hiekka);
-            padding: 10px;
-            margin: 10px;
-        }
-        .blogPostCard a {
+<style>
+    .blogPostCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid var(--hiekka);
+        padding: 25px;
+        margin: 10px;
+        border-radius: 10px;
+        width: 350px;
+        overflow: auto;
+        background-color: var(--tummanvihrea);
+        color: var(--vaaleanharmaa);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    .blogPostCard:hover {
+        filter: brightness(1.1)
+    }
+    .blogPostCard a {
         text-decoration: none;
         color: var(--musta);
     }
-    </style></a
->
+    h1 {
+        font-size: 1.5rem;
+        margin: 0;
+    }
+</style>
