--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,8 @@ import CustomerStory from '../components/mainPage/CustomerStory.astro'
 import Register from '../components/mainPage/Register.astro'
 import ContactForm from '../components/mainPage/ContactForm.jsx'
 import Faq from '../components/mainPage/Faq.astro'
-const allPosts = await Astro.glob('../pages/posts/*.md');
-console.log(allPosts)
+import NewestBlogPosts from '../components/mainPage/NewestBlogPosts.astro'
 ---
-
-<!-- <h1>Tulossa.</h1> -->
 
 <Layout>
     <main>
@@ -20,6 +17,7 @@ console.log(allPosts)
         <Register />
         <ContactForm client:load />
         <Faq />
+        <NewestBlogPosts />
     </main>
 </Layout>
 
