--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -5,6 +5,6 @@ import BlogPostCard from "../common/BlogPostCard.astro";
 ---
 
 <div class="wrapper">
-    <h1 style="text-align: center;">Uusimmat teksit ravintolan työvuorosuunnittelusta</h1>
+    <h1 style="text-align: center;">Uusimmat tekstit ravintolan työvuorosuunnittelusta</h1>
     {threeMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
 </div>
