--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -5,7 +5,7 @@ import RegisterButton from '../common/RegisterButton.astro'
 
 <nav class="nav">
     <div>
-        <a href="./" class="logo">
+        <a href="/" class="logo">
             <h1>Tyovuorolista.fi</h1>
             <h4>Ravintolan työvuorolista nopeasti ja helposti</h4>
         </a>
