--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -7,7 +7,7 @@ import dayjs from 'dayjs'
 
 <Layout>
     <div class="blogWrapper">
-        {frontmatter.image && <img src={frontmatter.image.url} alt={frontmatter.title} />}
+        {frontmatter.image && <img src={frontmatter.image.url} alt={frontmatter.image.alt} />}
         <h1>{frontmatter.title}</h1>
         <p>Kirjoittanut {frontmatter.author}<br />
         Julkaistu {dayjs(frontmatter.pubDate).format('DD.MM.YYYY')}</p>
