--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,8 @@ import Footer from '../components/navigation/Footer.astro'
         <meta name="description" content="Tyovuorolista.fi: ravintolan työvuorolistat nopeasti ja helposti" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+        <link rel="sitemap" href="/sitemap-index.xml">
+        <link rel="sitemap" href="/sitemap-0.xml">
         <!-- Primary Meta Tags -->
         <title>Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti</title>
         <meta name="title" content="Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti" />
