--- a/src/components/mainPage/DemoVideo.astro
+++ b/src/components/mainPage/DemoVideo.astro
@@ -10,7 +10,7 @@ import tyovuorolista_hero from '../../assets/tyovuorolista_hero.jpg'
         Työvuorot lisätään listaan raahamalla työntekijä oikealle kohdalle. Julkaisu tapahtuu nappia painamalla, jolloin
         kaikille työntekijöille lähetetään lista sähköpostilla ravintolan omasta sähköpostiosoitteesta.
     </p>
-    <video autoplay="autoplay" loop="loop" muted="muted" preload="auto" width="100%" poster={tyovuorolista_hero}>
+    <video controls autoplay="autoplay" loop="loop" muted="muted" preload="auto" width="100%" poster={tyovuorolista_hero}>
         <source src={tyovuorolista_demo} type="video/mp4" />
     </video>
     <div class="stepByStep">
