--- a/src/components/mainPage/DemoVideo.astro
+++ b/src/components/mainPage/DemoVideo.astro
@@ -1,7 +1,7 @@
 ---
 import tyovuorolista_demo from '../../assets/tyovuorolista_demo.mp4'
 import Button from '../common/Button.astro'
-import tyovuorolista_hero from '../../assets/tyovuorolista_hero.jpg'
+import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
 ---
 
 <div class="wrapper" style="margin-top: 8rem;">
