New post + navigation responsiveness

--- a/src/components/common/BlogPostCard.astro
+++ b/src/components/common/BlogPostCard.astro
@@ -62,9 +62,8 @@ img {
         margin: 0;
     }
     @media (max-width: 640px) {
-
         .blogPostCard {
-            width: 100%;
+            width: 75vw;
         }
         img {
             width: 100%;
