--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -1,14 +1,15 @@
 ---
 const allPosts = await Astro.glob('../../pages/posts/*.md')
-const threeMostRecentPosts = allPosts.slice(0, 3)
+const fourMostRecentPosts = allPosts.slice(0, 4)
 import BlogPostCard from '../common/BlogPostCard.astro'
 ---
 
 <div class="wrapper">
     <h1 style="text-align: center;">Uusimmat tekstit ravintolan työvuorosuunnittelusta</h1>
     <div class="blogPosts">
-        {threeMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
+        {fourMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
     </div>
+    <a href="/blogitekstit"><h3>Katso kaikki tekstit</h3></a>
 </div>
 
 <style>
