--- a/src/components/mainPage/DemoVideo.astro
+++ b/src/components/mainPage/DemoVideo.astro
@@ -1,7 +1,6 @@
 ---
 import tyovuorolista_demo from '../../assets/tyovuorolista_demo.mp4'
 import Button from '../common/Button.astro'
-import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
 ---
 
 <div class="wrapper" style="margin-top: 8rem;">
@@ -10,7 +9,7 @@ import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
         Työvuorot lisätään listaan raahamalla työntekijä oikealle kohdalle. Julkaisu tapahtuu nappia painamalla, jolloin
         kaikille työntekijöille lähetetään lista sähköpostilla ravintolan omasta sähköpostiosoitteesta.
     </p>
-    <video controls autoplay="autoplay" loop="loop" muted="muted" preload="auto" width="100%" poster={tyovuorolista_hero}>
+    <video controls autoplay="autoplay" loop="loop" muted="muted" preload="auto" width="100%" poster='/tyovuorolista_hero.png'>
         <source src={tyovuorolista_demo} type="video/mp4" />
     </video>
     <div class="stepByStep">
