--- a/src/pages/blogitekstit.astro
+++ b/src/pages/blogitekstit.astro
@@ -1,5 +1,7 @@
 ---
 const allPosts = await Astro.glob('../pages/posts/*.md')
+console.log(allPosts)
+const sortedPosts = allPosts.sort((a, b) => a.frontmatter.pubDate < b.frontmatter.pubDate ? 1 : -1)
 import BlogPostCard from '../components/common/BlogPostCard.astro'
 import Layout from '../layouts/Layout.astro'
 ---
@@ -8,7 +10,7 @@ import Layout from '../layouts/Layout.astro'
     <div class="wrapper">
         <h1>Tekstejä ravintolan työvuorosuunnittelusta</h1>
         <div class="blogitekstit">
-            {allPosts.map((post) => <BlogPostCard post={post} />)}
+            {sortedPosts.map((post) => <BlogPostCard post={post} />)}
         </div>
     </div>
 </Layout>
