Pisin sallittu työvuoro post

--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -21,4 +21,11 @@ import BlogPostCard from '../common/BlogPostCard.astro'
         flex-wrap: wrap;
         width: 100%;
     }
+    h3 a {
+        color: var(--color-primary);
+    }
+    
+    a:visited {
+        color: var(--color-primary);
+    }
 </style>
