--- a/src/components/common/RegisterButton.astro
+++ b/src/components/common/RegisterButton.astro
@@ -30,5 +30,8 @@
         color: var(--textColor, #333);
         font-size: 1.2em;
     }
+    a {
+        text-decoration: none;
+    }
 </style>
 
