--- a/src/components/mainPage/Hero.astro
+++ b/src/components/mainPage/Hero.astro
@@ -14,7 +14,7 @@ import RegisterButton from '../common/RegisterButton.astro'
     <span class="buttons">
         <RegisterButton />
         <span style="color: var(--harmaa);">TAI</span>
-        <Button text="Ota yhteyttä" backgroundColor="var(--ruskeaharmaa)" href="./yhteystiedot" />
+        <Button text="Kokeile demoa" backgroundColor="var(--ruskeaharmaa)" href="https://app.tyovuorolista.fi/demo" target="_blank" />
     </span>
 </div>
 
