Mobile usability improvements

--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -28,4 +28,9 @@ import BlogPostCard from '../common/BlogPostCard.astro'
     a:visited {
         color: var(--color-primary);
     }
+    @media (max-width: 640px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
 </style>
