--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,4 +100,9 @@ import Footer from '../components/navigation/Footer.astro'
         margin-top: 2rem;
         padding: 2rem;
     }
+    @media (max-width: 767px) {
+                p {
+                    font-size: 20px !important;
+                }
+            }
 </style>
