Remove restaurant things

--- a/src/components/mainPage/Faq.astro
+++ b/src/components/mainPage/Faq.astro
@@ -22,7 +22,7 @@
             <p>Maksu hoidetaan kuukausi kerrallaan, ja voit koska tahansa lopettaa tilauksen. Ei mitään sitoutumisaikoja. Esimerkiksi kesäravintola voi maksaa käytöstä kesän ajan ja katkaista tilauksen talveksi.</p>
             
             <h3>Koska voin aloittaa?</h3>
-            <p>Rekisteröintiin ja alkuasetuksiin menee noin 5 minuuttia. Voit julkaista ensimmäisen työvuorolistasi vaikkapa vartin kuluttua.</p>
+            <p>Rekisteröintiin ja alkuasetuksiin menee noin 3 minuuttia. Voit julkaista ensimmäisen työvuorolistasi vaikkapa vartin kuluttua.</p>
             
             <h3>Kuka tämä on tehnyt?</h3>
             <p>Olen Antti Tuomola. Minulla on yli 15 vuoden kokemus ravintola-alalta työntekijänä, esimiehenä ja yrittäjänä. Olen työskennellyt lähiöbaareissa ja Michelin-ravintoloissa, pyörittänyt kartanoravintoloita ja ruokapyörää. Mitä tahansa olenkin tehnyt, olen aina tehnyt työvuorolistoja. Välillä excelillä, välillä tarkoitukseen tehdyillä softilla. Koskaan en ole ollut niihin täysin tyytyväinen. Siksi tämä.</p>
@@ -33,7 +33,7 @@
             <p>Koko sovellus on rakennettu sillä ajatuksella, että työvuorolistan teko olisi mahdollisimman helppoa. Käyttöliittymä on graafinen, ja vuorojen lisääminen tehdään raahaamalla työntekijän nimi oikeaan kohtaan.</p>
             
             <h3>Miten listojen julkaisu tapahtuu?</h3>
-            <p>Kun lista on valmis julkaistavaksi, painat vain Julkaise-nappia, jolloin kaikille listan työntekijöille (ja tarvittaessa muillekin) lähetetään sähköposti ravintolasi sähköpostiosoitteesta, jossa on paitsi työntekijän henkilökohtainen työvuorolista, myös koko salin / keittiön lista.</p>
+            <p>Kun lista on valmis julkaistavaksi, painat vain Julkaise-nappia, jolloin kaikille listan työntekijöille (ja tarvittaessa muillekin) lähetetään sähköposti, jossa on työntekijän henkilökohtainen työvuorolista. Voit myös tulosaa kuvan tai PDF:n ja julkaista sen haluamallasi tavalla.</p>
             
             <h3>Miten tämä eroaa MaraPlanista / Planierista / HR suunnista / jne?</h3>
             <p>Työvuorolista eroaa muista alan toimijoista mm. näillä tavoilla:
