--- a/src/components/mainPage/Hero.astro
+++ b/src/components/mainPage/Hero.astro
@@ -6,7 +6,7 @@ import RegisterButton from '../common/RegisterButton.astro'
 ---
 
 <div class="hero">
-    <h1>Ravintolan työvuorolista nopeasti ja helposti</h1>
+    <h1>PK-yrityksen työvuorolista nopeasti ja helposti</h1>
     <div class="heroImage">
         <Image src={tyovuorolista_hero} alt="Työvuorolista" width={600} loading='eager'/>
     </div>
