Removed restaurant mentions

--- a/src/components/mainPage/DemoVideo.astro
+++ b/src/components/mainPage/DemoVideo.astro
@@ -7,7 +7,7 @@ import Button from '../common/Button.astro'
     <h2>Työvuorolistan teko voi olla myös helppoa</h2>
     <p>
         Työvuorot lisätään listaan raahamalla työntekijä oikealle kohdalle. Julkaisu tapahtuu nappia painamalla, jolloin
-        kaikille työntekijöille lähetetään lista sähköpostilla ravintolan omasta sähköpostiosoitteesta.
+        kaikille työntekijöille lähetetään lista sähköpostilla.
     </p>
     <video controls autoplay="autoplay" loop="loop" muted="muted" preload="auto" width="100%" poster='/tyovuorolista_hero.png'>
         <source src={tyovuorolista_demo} type="video/mp4" />
