--- a/src/components/mainPage/NewestBlogPosts.astro
+++ b/src/components/mainPage/NewestBlogPosts.astro
@@ -6,7 +6,7 @@ import BlogPostCard from '../common/BlogPostCard.astro'
 ---
 
 <div class="wrapper">
-    <h1 style="text-align: center;">Uusimmat tekstit ravintolan työvuorosuunnittelusta</h1>
+    <h1 style="text-align: center;">Uusimmat tekstit astetta helpommasta työvuorosuunnittelusta</h1>
     <div class="blogPosts">
         {fourMostRecentPosts.map((post) => <BlogPostCard post={post} />)}
     </div>
