--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -7,7 +7,7 @@ import RegisterButton from '../common/RegisterButton.astro'
     <div>
         <a href="/" class="logo">
             <h1>Tyovuorolista.fi</h1>
-            <h4>Ravintolan työvuorolista nopeasti ja helposti</h4>
+            <h4>PK-yrityksen työvuorolista nopeasti ja helposti</h4>
         </a>
     </div>
     <div class="navRight">
