--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,26 +7,26 @@ import Footer from '../components/navigation/Footer.astro'
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Tyovuorolista.fi: ravintolan työvuorolistat nopeasti ja helposti" />
+        <meta name="description" content="Tyovuorolista.fi: PK-yrityksen työvuorolistat nopeasti ja helposti" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/svg+xml" href="/favicon.png" />
         <link rel="sitemap" href="/sitemap-index.xml">
         <link rel="sitemap" href="/sitemap-0.xml">
         <!-- Primary Meta Tags -->
-        <title>Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti</title>
-        <meta name="title" content="Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti" />
+        <title>Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti</title>
+        <meta name="title" content="Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti" />
         <meta
             name="description"
-            content="Ravintolan työvuorolistan suunnittelu ja julkaisu niin salin kuin keittiönkin puolelle helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
+            content="PK-yrityksen työvuorolistan suunnittelu ja julkaisu eri tiimeille helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
         />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://tyovuorolista.fi/" />
-        <meta property="og:title" content="Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti" />
+        <meta property="og:title" content="Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti" />
         <meta
             property="og:description"
-            content="Ravintolan työvuorolistan suunnittelu ja julkaisu niin salin kuin keittiönkin puolelle helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
+            content="PK-yrityksen työvuorolistan suunnittelu ja julkaisu eri tiimeille helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
         />
         <meta
             property="og:image"
@@ -36,10 +36,10 @@ import Footer from '../components/navigation/Footer.astro'
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://tyovuorolista.fi/" />
-        <meta property="twitter:title" content="Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti" />
+        <meta property="twitter:title" content="Työvuorolista.fi: PK-yrityksen työvuorolista nopeasti ja helposti" />
         <meta
             property="twitter:description"
-            content="Ravintolan työvuorolistan suunnittelu ja julkaisu niin salin kuin keittiönkin puolelle helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
+            content="PK-yrityksen työvuorolistan suunnittelu ja julkaisu eri tiimeille helposti ja nopeasti. Ota heti käyttöön viidessä minuutissa!"
         />
         <meta
             property="twitter:image"
