Muistiinpanot blog post + blog img styling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,7 +99,13 @@ import Footer from '../components/navigation/Footer.astro'
         margin: 0 auto;
         margin-top: 2rem;
         padding: 2rem;
+		
     }
+
+	.blogWrapper img {
+    	margin-top: 3rem;
+	}
+
     @media (max-width: 767px) {
                 p {
                     font-size: 20px !important;
