Add link to terms of use, privacy policy, and refund policy in footer

--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -9,6 +9,7 @@ const currentYear = new Date().getFullYear();
         <p><a href="./yhteystiedot">Yhteystiedot</a></p>
         <p><a href="./hinnoittelu">Hinnoittelut</a></p>
         <p><a href="./kayttoohjeet">Käyttöohjeet</a></p>
+		<p><a href="./kayttoehdot">Käyttöehdot, tietosuojaseloste ja hyvityskäytännöt</a></p>
     </div>
 </div>
 
