Update company information in terms of service

--- a/src/pages/kayttoehdot.astro
+++ b/src/pages/kayttoehdot.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro'
 	<div class="wrapper" style="width: 600px; margin: 0 auto">
 	<h2>Käyttöehdot</h2>
 	<p>1. Palvelun kuvaus</p>
-	<p>Tyovuorolista.fi on verkkosovellus, joka mahdollistaa työvuorolistojen suunnittelun ja julkaisun. Sovellus on suunnattu pienille ja keskisuurille yrityksille.</p>
+	<p>Tyovuorolista.fi on True Solutions Oy:n (Y-tunnus: 3431534-2) tuottama verkkosovellus, joka mahdollistaa työvuorolistojen suunnittelun ja julkaisun. Sovellus on suunnattu pienille ja keskisuurille yrityksille.</p>
 	
 	<p>2. Rekisteröityminen</p>
 	<p>Käyttäjän tulee rekisteröityä palveluun antamalla yrityksen nimi, sähköpostiosoite ja tarvittaessa puhelinnumero. Palvelun käyttö edellyttää myös työntekijöiden nimien ja sähköpostiosoitteiden lisäämistä.</p>
