Update contact information in mainPage/Contact.astro

--- a/src/components/mainPage/Contact.astro
+++ b/src/components/mainPage/Contact.astro
@@ -4,10 +4,10 @@
 
 <div class="wrapper">
     <h1>Tyovuorolista.fi yhteystiedot</h1>
-    <h4>Antti Tuomola</h4>
-    <p>Tmi Antti Tuomola / Työvuorolista.fi</p>
-    <p>Y-tunnus: 1750473-1</p>
+    <p>True Solutions / Työvuorolista.fi</p>
+    <p>Y-tunnus: 3431534-2</p>
     <p>Juhannuskylänkatu 1 B 6, 33100 Tampere</p>
+	<p>Myynti: <a href='mailto:eemeli@tyovuorolista.fi'>eemeli@tyovuorolista.fi</a></p>
     <p><a href='mailto:info@tyovuorolista.fi'>info@tyovuorolista.fi</a></p>
     <p><a href='tel:+358456798818'>+358 45 679 8818</a></p>
 </div>
