New recommendation from Kitola

--- a/src/components/mainPage/CustomerStory.astro
+++ b/src/components/mainPage/CustomerStory.astro
@@ -1,25 +1,41 @@
 ---
 import { Image } from 'astro:assets'
 import laura_dahlman from '../../assets/laura_dahlman.jpg'
+import anita_lindov_kitola_oy from '../../assets/anita_lindov_kitola_oy.jpg'
 ---
 
 <div class="wrapper">
-	<div class="recommendations">
-		<div class="customerStory">
-			<Image src={laura_dahlman} quality="max" alt="Image of Laura Dahlman" />
-			<div>
-				<h2>"Työvuorolistan teko on ollut kyllä helppoa. Työntekijätkin kiittelevät listojen ulkoasua!""</h2>
-				<p>Laura Dahlman, Ravintola Apaja, Tampere</p>
-			</div>
-		</div>
-		<div class="customerStory">
-			<div>
-				<h2>"Todella selkeä ja helppokäyttöinen paketti ravintolan työvuorojen suunnitteluun ja jakeluun.""</h2>
-					<i>"Jos vielä räpläät työvuoroja Excelillä tai ruutupaperilla, etkä halua maksaa kassikaupalla raskaista taloushallinnan ohjelmistopaketeista, niin nyt viimeistään kannattaa kokeilla Työvuorolistaa. Lämmin suositus."</i>
-				<p><strong>Rami Käkönen, Ravintola Askaisten Holvi, Askainen</strong></p>
-			</div>
-		</div>
-	</div>
+    <div class="recommendations">
+        <div class="customerStory">
+            <Image src={laura_dahlman} quality="max" alt="Image of Laura Dahlman" />
+            <div>
+                <h2>"Työvuorolistan teko on ollut kyllä helppoa. Työntekijätkin kiittelevät listojen ulkoasua!""</h2>
+                <p>Laura Dahlman, Ravintola Apaja, Tampere</p>
+            </div>
+        </div>
+        <div class="customerStory">
+            <div>
+                <h2>"Todella selkeä ja helppokäyttöinen paketti ravintolan työvuorojen suunnitteluun ja jakeluun."</h2>
+                <i
+                    >"Jos vielä räpläät työvuoroja Excelillä tai ruutupaperilla, etkä halua maksaa kassikaupalla
+                    raskaista taloushallinnan ohjelmistopaketeista, niin nyt viimeistään kannattaa kokeilla
+                    Työvuorolistaa. Lämmin suositus."</i
+                >
+                <p><strong>Rami Käkönen, Ravintola Askaisten Holvi, Askainen</strong></p>
+            </div>
+        </div>
+        <div class="customerStory reverse-layout">
+            <Image src={anita_lindov_kitola_oy} quality="max" alt="Image of Anita Lindov" />
+            <div>
+                <h2>
+                    "Työvuorolistojen tekemisestä on tullut todella helppo, tosiaan - ei mitään turhaa näpyttelyä!
+                    Listat tulee valmiiksi nopeasti ja ne lähetetään jokaisen työntekijän sähköpostiin. Jos apua on
+                    tarvittu, niin tuki ja neuvo on aina ollut nopeasti saatavilla!"
+                </h2>
+                <p><strong>Anita Lindov, Velj. Kitola Oy, Nousiainen</strong></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <style>
@@ -32,14 +48,18 @@ import laura_dahlman from '../../assets/laura_dahlman.jpg'
     .customerStory {
         display: flex;
         gap: 2rem;
-		height: 350px;
-		width: 500;
+        height: 350px;
+        width: 500;
     }
-	.recommendations {
-		display: flex;
-		flex-direction: column;
-		gap: 3rem;
-	}
+    .reverse-layout {
+        flex-direction: row-reverse;
+    }
+    .recommendations {
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+        margin-bottom: 3rem;
+    }
     h2 {
         font-style: italic;
         font-weight: 400;
@@ -51,13 +71,14 @@ import laura_dahlman from '../../assets/laura_dahlman.jpg'
             flex-direction: column;
             align-items: center;
             justify-content: center;
-			height: auto;
+            height: auto;
         }
         img {
             width: 100%;
             height: auto;
         }
-        h2,p {
+        h2,
+        p {
             text-align: center;
         }
     }
